<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_fridge"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_fridge" />
    <item
        android:id="@+id/nav_recipes"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_recipes" />
    <item
        android:id="@+id/nav_plan"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/nav_plan" />
    <item
        android:id="@+id/nav_stats"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_stats" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
